// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            {
              "canInstrument": true,
              "createTransformer": [Function],
              "getCacheKey": [Function],
              "process": [Function],
            }
          }
          style={
            {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isDisabled] status 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            {
              "canInstrument": true,
              "createTransformer": [Function],
              "getCacheKey": [Function],
              "process": [Function],
            }
          }
          style={
            {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isLoading] status 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            {
              "canInstrument": true,
              "createTransformer": [Function],
              "getCacheKey": [Function],
              "process": [Function],
            }
          }
          style={
            {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "black",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            {
              "canInstrument": true,
              "createTransformer": [Function],
              "getCacheKey": [Function],
              "process": [Function],
            }
          }
          style={
            {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            [
              {
                "color": "white",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "white",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          [
            {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            [
              {
                "color": "white",
              },
              [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;
